--- a/website/vhoper/app.html
+++ b/website/vhoper/app.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html {{ HTML_ATTRS }}>
-<head>
+    <meta charset="UTF-8" />
+    <!-- <meta name="renderer" content="webkit"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <meta content-type="text/x-component" http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <!-- <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0"> -->
 {{ HEAD }}
 </head>
 <body {{ BODY_ATTRS }}>
